Bilder hochgeladen und als Banner eingestellt

--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ body {
 
 /* Hero Hintergrundbilder */
 .layer-cake {
-  background-image: url("https://placehold.co/1200x800/FFD700/000000?text=Torten");
+  background-image: url("assets/Hochzeitstorte bearbeitet.jpeg");
   opacity: 0.3;
 }
 
