--- a/style.css
+++ b/style.css
@@ -642,6 +642,16 @@ body {
   text-align: center;
 }
 
+@media (max-width: 480px) {
+  .gallery-grid {
+    grid-template-columns: 1fr;
+  }
+
+  .gallery-grid img {
+    height: 220px;
+  }
+}
+
 
   /* ---------- Galerie Button auf Startseite ---------- */
   .gallery-cta {
