kleines Logo hochgeladen um performace zu verbessern

--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ body {
 
 /* Hero Hintergrundbilder */
 .layer-cake {
-  background-image: url("assets/Logo1_4K.png");
+  background-image: url("assets/Logo1.jpeg");
   opacity: 0.3;
 }
 /*
