--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
   --bg-card: #ffffff;        /* Karten / Boxen */
 
   --text-main: #EAEAEA;      /* Haupttext */
-  --text-muted: #BFC7D5;     /* Nebentext */
+  --text-muted: #000000;     /* Nebentext */
 
   --border-soft: rgba(255,255,255,0.08);
 }
